# PyThermite

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml  test_run.py
.github/workflows/: CI.yml
PyIndex/src/: index.py  indexable.py
PyThermite/: PyThermite.pyi  __init__.py
PyThermite/src/: lib.rs
PyThermite/src/index/: hybrid_hashmap.rs  hybrid_set.rs  indexable.rs  mod.rs  types.rs  value.rs
PyThermite/src/index/core/: filtered_index.rs  id_alloc.rs  index.rs  mod.rs  stored_item.rs
PyThermite/src/index/core/query/: delayed_query.rs  mod.rs  query.rs  query_ops.rs  query_ops_removal.rs
PyThermite/src/index/core/query/b_tree/: composite_key.rs  key.rs  mod.rs  ranged_b_tree.rs
PyThermite/src/index/core/query/b_tree/nodes/: internal_node.rs  leaf_node.rs  mod.rs
PyThermite/src/index/core/structures/: composite_key.rs  mod.rs
PyThermite/src/index/core/structures/boolean_bitmap/: boolean_bitmap.rs  mod.rs
PyThermite/src/index/core/structures/buffered_bitmap/: buffered_bitmap.rs  mod.rs
PyThermite/src/index/core/structures/centered_array/: centered_array.rs  mod.rs
PyThermite/src/index/core/structures/hybrid_hashmap/: hybrid_hashmap.rs  mod.rs  radix_map.rs
PyThermite/src/index/core/structures/hybrid_set/: hybrid_set.rs  medium.rs  mod.rs  small.rs
PyThermite/src/index/core/structures/m2m/: m2m_u32.rs  mod.rs
PyThermite/src/index/core/structures/ordered_bitmap/: mod.rs  ordered_bitmap.rs  ordered_bitmap_bt.rs  ordered_bitmap_gt.rs  ordered_bitmap_lt.rs
PyThermite/src/index/core/structures/positional_bitmap/: mod.rs  positional_bitmap.rs
PyThermite/src/index/core/structures/shards/: mod.rs
PyThermite/src/index/core/structures/shards/hashmap/: hashmap.rs
PyThermite/src/index/core/structures/string_interner/: immutable_interner.rs  interner.rs  interner_view.rs  mod.rs  mutable_interner.rs
PyThermite/src/index/interfaces/: filtered_index.rs  index.rs  mod.rs  query.rs
PyThermite/src/rs/: lib.rs  main.rs
PyThermite/src/rs/index/: allocators.rs  filtered_index.rs  hybrid_hashmap.rs  hybrid_set.rs  index.rs  indexable.rs  mod.rs  query.rs  ranged_b_tree.rs  stored_item.rs  types.rs  value.rs
py_index/: __init__.py  py_index.cp311-win_amd64.pyd
py_index/src/py/: index.py  indexable.py
py_index/src/rs/: lib.rs  main.rs
py_index/src/rs/index/: filtered_index.rs  hybrid_set.rs  index.rs  indexable.rs  mod.rs  py_dict_values.rs  query.rs  ranged_b_tree.rs  stored_item.rs  value.rs
tests/: multithreaded_performance_test.py  observed_bug_1_test.py  performance_per_object.py  performance_test.py  test_group_by.py  test_interface.py  test_nested_queries.py
