[package]
name = "pythermite"
version = "0.0.5-alpha"
edition = "2021"

[lib]
name = "PyThermite"
path = "PyThermite/src/rs/lib.rs"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[[bin]]
name = "main"
path = "PyThermite/src/rs/main.rs"

[dependencies]
rand = "0.9.0"
roaring = "0.11"
croaring = "2.3.1"
pyo3 = { version = "0.25.1", features = ["extension-module"] }
ahash = "0.8.12"
ordered-float = "5.0.0"
rayon = "1.10.0"
dashmap = "6.1.0"
rustc-hash = "2.1.1"
smallvec = "1.15.1"
once_cell = "1.21.3"
smol_str = "0.3.2"
